# dk-api

./: .coverage  .coveragerc  .env.example  .gitignore  README.md  REFACTORING_SUMMARY.md  conftest.py  dev.db  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
app/: __init__.py  config.py  main.py  models.py  routes.py  seed.py
app/api/tenant/: __init__.py  router.py
app/api/tenant/endpoints/: __init__.py  auth.py  dashboard.py  invoices.py  profile.py  users.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  auth.py  (+5 more)
app/core/: config.py  dependencies.py  security.py  tenant.py
app/db/: database.py  seed.py
app/models/: __init__.py  company.py  plan.py
app/order/: models.py  routes.py  schemas.py  services.py
app/report/: routes.py  schemas.py  services.py
app/repositories/: __init__.py  base.py  company_repository.py  plan_repository.py  user_repository.py
app/schemas/: __init__.py  company.py  invoice.py  plan.py  token.py  user.py
app/services/: __init__.py  company_service.py  plan_service.py  registration_service.py  user_service.py
app/static/css/: calendar.css  main.css
app/templates/: base.html  calendar.html  invoices.html
app/tests/: conftest.py
app/tests/e2e/: test_full_flow.py
app/tests/integration/: test_additional_coverage.py  test_company_endpoints.py  test_dashboard_endpoints.py  test_user_endpoints.py
app/tests/unit/: test_file_handler.py  test_repositories.py  test_security.py
app/user/: auth.py  models.py  routes.py  schemas.py  services.py
app/utils/: file_handler.py
backend/: .coverage  pytest.ini  requirements.txt  test.db
backend/app/: auth.py  database.py  main.py  routes.py  schemas.py  seed.py
backend/app/core/: config.py
backend/app/models/: __init__.py  company.py  invoice.py  user.py
backend/app/repositories/: invoice_repository.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py  company_service.py  invoice_service.py
backend/tests/integration/: test_auth_endpoints.py  test_invoice_endpoints.py
backend/tests/unit/: test_edge_cases.py  test_schemas.py  test_services.py
frontend/static/css/: calendar.css
frontend/templates/: companies.html  dashboard.html  login.html  users.html
frontend/templates/components/: sidebar.html
tests/: conftest.py
tests/order/: test_routes.py  test_services.py
tests/report/: test_routes.py  test_services.py
tests/user/: test_auth.py  test_routes.py  test_services.py
(+1 files in other folders)
