[tool.poetry]
name = "dk-api"
version = "0.1.0"
description = ""
authors = ["Tiago Lemos <tiagolemos@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.124.2"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.45"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
python-jose = "^3.5.0"
bcrypt = "^5.0.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
